@@ -72,3 +72,7 @@
 2011-02-27 Jihoon Kim
 
         * Add ecore_imf_context_preedit_string_with_attributes_get API.
+
+2011-03-01 Raoul Hecky
+
+	* Add ecore_con_url_ssl_verify_peer_set API.
